fix: remove unsupported anchor wrapping of link/-pure | mh

--- a/styles.scss
+++ b/styles.scss
@@ -4,11 +4,6 @@
   margin-bottom: 2rem;
 }
 
-.removeLinkStyle {
-  text-decoration: none;
-  outline: none;
-}
-
 .divider {
   margin-bottom: 2rem;
   margin-top: 2rem;
